[package]
name = "rosemain"
version = "0.1.0"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
dotenv = "0.13.0"
juniper = "0.10.0"

[dependencies.diesel]
version = "1.3.3"
features = ["chrono", "postgres", "r2d2", "uuid"]

[dependencies.tide]
git = "https://github.com/rust-net-web/tide.git"

[dependencies.uuid]
version = "0.6.5"
features = ["v4"]
